src/test/deca/context/invalid/testSameNameParam.deca
// Description : Deux paramètres ayant le même nom dans une méthode
class A {
    int a;
    void nomMethode(int b, float b) {
    }
}
